k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bhai-dns
  labels:
    name: bhai-dns
    app: bhai-ka-dns
